chore: tests fixed. Dictionary/Search modules
